argocd/platform/supabase-storage/envs/dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: supabase-storage
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - supabase-storage.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: supabase-storage
          port: 5000
      matches:
        - path:
            type: PathPrefix
            value: /
